# shivjot-core

./: LICENSE  README.md  pyproject.toml
src/shivjot_core/: __init__.py
src/shivjot_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
