[project]
name = "shivjot-core"
version = "1.0.5"
authors = [
  { name="Shivjot Choudhary", email="shivjotchaudhary0@gmail.com" }
]
description = "High-performance Python utilities for AI/ML and Image Processing."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]

[project.urls]
Homepage = "https://pypi.org/project/shivjot-core/"
Portfolio = "https://shivjotchoudhary.github.io/"
"Source Code" = "https://github.com/ShivjotChoudhary/shivjot-core"
Issues = "https://github.com/ShivjotChoudhary/shivjot-core/issues"